force-app/main/default/objects/Milestone_Receipt__c/Milestone_Receipt__c.object-meta.xml
<CustomObject>
    <label>Milestone Receipt</label>
    <nameField>
        <label>Milestone Receipt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>