force-app/main/default/objects/Milestone_Receipt__c/fields/Cash_Flow__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Flow</label>
    <referenceTo>Cash_Flow__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Milestone_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>