force-app/main/default/objects/Milestone_Receipt__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source invoice this allocation row came from. Set by the Financial Engine so Milestone_Receipt__c is a reversible Receipt -> Invoice -> Cash_Flow ledger. The Cash_Flow__c on the same row may not be linked to this invoice (excess spills to the unit's next installments), so this records where the money originated, not necessarily an invoice the cash flow belongs to.</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Milestone Receipts</relationshipLabel>
    <relationshipName>Milestone_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>